--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "license": "MIT",
   "dependencies": {
     "@atsu/choukai": "file:../Choukai",
-    "ink": "^4.0.0",
+    "ink": "^4.0.0"
+  },
+  "peerDependencies": {
     "react": "^18.0.0"
   },
   "devDependencies": {
@@ -42,7 +44,9 @@
     "eslint-config-prettier": "^9.1.2",
     "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.5.0",
+    "ink-testing-library": "^4.0.0",
     "prettier": "^3.6.2",
+    "react": "^18.0.0",
     "ts-node": "^10.0.0",
     "tslib": "^2.8.1",
     "tsup": "^8.5.1",
