--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0",
-    "vitest": "^1.6.1"
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.1.9",
+    "vitest": "^2.1.9"
   }
 }
