Add engines field specifying Node.js 18+ requirement

--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "format": "prettier --write src",
     "test": "vitest run"
   },
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "keywords": [
     "game-engine",
     "terminal",
